# duckdb-pgq.old

./: CMakeLists.txt  Makefile  create_python_package.sh
.github/workflows/: main.yml
benchmark/: benchmark_runner.cpp
benchmark/include/: benchmark.hpp  duckdb_benchmark.hpp
experiments/: test_dup_hash_elim.py  test_path_length.py
extension/: CMakeLists.txt  extension_helper.hpp
extension/fts/: fts-extension.cpp
extension/httpfs/: httpfs-extension.cpp
extension/icu/: icu-extension.cpp
extension/sqlpgq/: CMakeLists.txt  sqlpgq-extension.cpp  sqlpgq_config.py
extension/sqlpgq/include/: sqlpgq-extension.hpp  sqlpgq_functions.hpp
extension/sqlpgq/sqlpgq_functions/: CMakeLists.txt  sqlpgq_cheapest_path.cpp  sqlpgq_csr_creation.cpp  sqlpgq_csr_deletion.cpp  sqlpgq_reachability.cpp  sqlpgq_shortest_path.cpp
extension/sqlpgq/vectorclass/: CMakeLists.txt  test.cpp
extension/tpcds/: tpcds-extension.cpp
extension/tpch/: tpch-extension.cpp
extension/visualizer/: visualizer-extension.cpp
scripts/: regenerate_grammer.sh
src/catalog/: catalog.cpp
src/execution/: physical_operator.cpp  physical_plan_generator.cpp  radix_partitioned_hashtable.cpp
src/function/: function.cpp
src/main/: client_context.cpp  database.cpp
src/parallel/: executor.cpp  pipeline.cpp
src/parser/: CMakeLists.txt  property_graph_table.cpp  tableref.cpp  transformer.cpp
src/planner/: binder.cpp  joinside.cpp
src/storage/: checkpoint_manager.cpp  wal_replay.cpp  write_ahead_log.cpp
src/transaction/: commit_state.cpp
test/helpers/: test_helper_extension.cpp
(+237 files in other folders)
